extensions/istio/tests/src/test/resources/v1beta1/virtual-service-issue48.yaml
#
# Copyright (C) 2015 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: null
  name: recommendation
  namespace: tutorial
spec:
  hosts:
    - recommendation
  http:
    - match:
        - headers:
            baggage-user-agent:
              regex: .*DarkLaunch.*
      route:
        - destination:
            host: recommendation
            subset: version-v2
    - route:
        - destination:
            host: recommendation
            subset: version-v1
